# python-project-template

./: README.md  pyproject.toml
src/package_name/: __init__.py  cli.py  core.py
tests/: test_core.py
